--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/i18n": "^8.0.0",
     "@vitejs/plugin-vue": "^4.4.0",
     "nuxt": "^3.7.3"
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
     "popper.js": "^1.16.1",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-i18n": "^9.9.0"
   }
 }
